--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -1,45 +1,12 @@
 Listen 8000
 <VirtualHost  *:8000>
         ServerAdmin webmaster@localhost
-        DocumentRoot "/home/marcus/workspace/code/web/ebeslut/source/public"
+        DocumentRoot "/home/marcus/workspace/ebeslut/source/public"
         ServerName ebeslut.local
-        ServerAlias www.rareup.local
+        ServerAlias www.ebeslut.local
 	SetEnv MACHINENAME marcus
         ErrorLog "/var/log/httpd/error_ebeslut_log"
-        <Directory "/home/marcus/workspace/code/web/ebeslut/source/public">
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
-        Order allow,deny
-        allow from all
-        Require all granted
-    </Directory>
-</VirtualHost>
-
-<VirtualHost  *:8000>
-        ServerAdmin webmaster@localhost
-        DocumentRoot "/home/marcus/workspace/code/web/tojoma/public"
-        ServerName tojoma.local
-        ServerAlias www.tojoma.local
-        ErrorLog "/var/log/httpd/error_ebeslut_log"
-
-        <Directory "/home/marcus/workspace/code/web/tojoma">
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
-        Order allow,deny
-        allow from all
-        Require all granted
-    </Directory>
-</VirtualHost>
-
-
-<VirtualHost  *:8000>
-        ServerAdmin webmaster@localhost
-        DocumentRoot "/home/marcus/workspace/code/web/rareup_old/public"
-        ServerName rareup.local
-        ServerAlias www.rareup.local
-        ErrorLog "/var/log/httpd/error_ebeslut_log"
-
-        <Directory "/home/marcus/workspace/code/web/rareup_old">
+        <Directory "/home/marcus/workspace/ebeslut/source/public">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         Order allow,deny
