--- a/httpd.conf
+++ b/httpd.conf
@@ -540,8 +540,8 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
-LoadModule php7_module modules/libphp7.so
+LoadModule php_module modules/libphp.so
 
-AddHandler php7-script php
+AddHandler php-script php
 
-Include conf/extra/php7_module.conf
+Include conf/extra/php_module.conf
